// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browser no module: dist/browser-no-module.browser.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

let thing = \\"wow\\";

{
  thing = \\"something\\";
}

{
  thing += \\"other\\";
}

var thing$1 = thing;

exports.default = thing$1;
"
`;

exports[`browser no module: dist/browser-no-module.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

let thing = \\"wow\\";

if (typeof window !== \\"undefined\\") {
  thing = \\"something\\";
}

if (typeof document !== undefined) {
  thing += \\"other\\";
}

var thing$1 = thing;

exports.default = thing$1;
"
`;

exports[`browser no module: dist/browser-no-module.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./browser-no-module.cjs.prod.js\\");
} else {
  module.exports = require(\\"./browser-no-module.cjs.dev.js\\");
}
"
`;

exports[`browser no module: dist/browser-no-module.cjs.prod.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

let thing = \\"wow\\";

if (typeof window !== \\"undefined\\") {
  thing = \\"something\\";
}

if (typeof document !== undefined) {
  thing += \\"other\\";
}

var thing$1 = thing;

exports.default = thing$1;
"
`;

exports[`browser no module: package.json 1`] = `
Object {
  "browser": Object {
    "./dist/browser-no-module.cjs.js": "./dist/browser-no-module.browser.cjs.js",
  },
  "main": "dist/browser-no-module.cjs.js",
  "name": "browser-no-module",
}
`;

exports[`browser no module: src/index.js 1`] = `
"let thing = \\"wow\\";

if (typeof window !== \\"undefined\\") {
  thing = \\"something\\";
}

if (typeof document !== undefined) {
  thing += \\"other\\";
}

export default thing;"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./umd-unused-peer-dep.cjs.prod.js\\");
} else {
  module.exports = require(\\"./umd-unused-peer-dep.cjs.dev.js\\");
}
"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.cjs.prod.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.umd.min.js 1`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):(e=\\"undefined\\"!=typeof globalThis?globalThis:e||self).validPackage=n()}(this,(function(){\\"use strict\\";return\\"something\\"}));
//# sourceMappingURL=umd-unused-peer-dep.umd.min.js.map
"
`;

exports[`should lazily get globals: src/index.js 1`] = `"export default \\"something\\";"`;

exports[`typescript with forced dts emit: dist/declarations/src/create-store.d.ts 1`] = `
"import { Action } from \\"@reduxjs/toolkit\\";
import { ThunkAction } from \\"redux-thunk\\";
import { RootState } from \\"./root-reducer\\";
export declare type AppThunk = ThunkAction<void, RootState, unknown, Action<string>>;
export declare function createStore(): any;
"
`;

exports[`typescript with forced dts emit: dist/declarations/src/index.d.ts 1`] = `
"export { createStore } from \\"./create-store\\";
export type { AppThunk } from \\"./create-store\\";
export type { RootState } from \\"./root-reducer\\";
"
`;

exports[`typescript with forced dts emit: dist/declarations/src/root-reducer.d.ts 1`] = `
"export declare const rootReducer: any;
export declare type RootState = ReturnType<typeof rootReducer>;
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.d.ts 1`] = `
"export * from \\"./declarations/src/index\\";
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var toolkit = require('@reduxjs/toolkit');

// @ts-ignore (installed during test)
var rootReducer = toolkit.combineReducers({
  /* blah blah blah */
});

// @ts-ignore (installed during test)
function createStore() {
  return toolkit.configureStore({
    reducer: rootReducer
  });
}

exports.createStore = createStore;
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./typescript-force-dts-emit.cjs.prod.js\\");
} else {
  module.exports = require(\\"./typescript-force-dts-emit.cjs.dev.js\\");
}
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.prod.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var toolkit = require('@reduxjs/toolkit');

// @ts-ignore (installed during test)
var rootReducer = toolkit.combineReducers({
  /* blah blah blah */
});

// @ts-ignore (installed during test)
function createStore() {
  return toolkit.configureStore({
    reducer: rootReducer
  });
}

exports.createStore = createStore;
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.esm.js 1`] = `
"import { combineReducers, configureStore } from '@reduxjs/toolkit';

// @ts-ignore (installed during test)
var rootReducer = combineReducers({
  /* blah blah blah */
});

// @ts-ignore (installed during test)
function createStore() {
  return configureStore({
    reducer: rootReducer
  });
}

export { createStore };
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.cjs.dev.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var _classCallCheck = require('@babel/runtime/helpers/classCallCheck');

var Foo = function Foo() {
  _classCallCheck(this, Foo);
};

exports.default = Foo;
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.cjs.js 1`] = `
"'use strict';

if (process.env.NODE_ENV === \\"production\\") {
  module.exports = require(\\"./external-babel-runtime.cjs.prod.js\\");
} else {
  module.exports = require(\\"./external-babel-runtime.cjs.dev.js\\");
}
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.cjs.prod.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var _classCallCheck = require('@babel/runtime/helpers/classCallCheck');

var Foo = function Foo() {
  _classCallCheck(this, Foo);
};

exports.default = Foo;
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.esm.js 1`] = `
"import _classCallCheck from '@babel/runtime/helpers/esm/classCallCheck';

var Foo = function Foo() {
  _classCallCheck(this, Foo);
};

export default Foo;
"
`;

exports[`using external @babel/runtime helpers: package.json 1`] = `
Object {
  "dependencies": Object {
    "@babel/runtime": "^7.0.0",
  },
  "main": "dist/external-babel-runtime.cjs.js",
  "module": "dist/external-babel-runtime.esm.js",
  "name": "external-babel-runtime",
}
`;

exports[`using external @babel/runtime helpers: src/index.js 1`] = `"export default class Foo {}"`;
